syntax = "proto3";

package order_service;

option go_package = "/proto";

import "google/protobuf/empty.proto";

service OrderService {
  rpc ListOrderByClientID (ListOrderByClientIDRequest) returns (OrderListResponse);
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc SetOrderStatus(SetOrderStatusRequest) returns (google.protobuf.Empty);
  rpc SetCar(SetCarRequest) returns(google.protobuf.Empty);
}

message ListOrderByClientIDRequest{
  string clientID = 1;
}

message OrderListResponse{
  repeated Order orders = 1;
}

message CreateOrderRequest{
  uint64 from = 2;
  uint64 to = 3;
  uint64 clientID=4;
}

message OrderResponse{
  Order order = 1;
}

message SetOrderStatusRequest{
  OrderStatus status = 1;
  string orderID = 2;
}

message SetCarRequest{
  string carID = 1;
  string orderID = 2;
}

message Order{
  string id = 1;
  uint64 from = 2;
  uint64 to = 3;
  uint64 clientID = 4;
  string carID = 5;
  OrderStatus status = 6;
}

enum OrderStatus {
  UNKNOWN = 0;
  WAITING = 1;
  IN_PROGRESS = 2;
  DONE = 3;
}

